tests/should_fail/logic_alias/not_a_funcall.stderr
error: `logic_alias` should contain a path to a logic function with the same signature, or a logic function call with same return type
  --> not_a_funcall.rs:10:15
   |
10 | #[logic_alias(get_greater_logic(a as i64, b as i64).into())]
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

